--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
 
     postgres:
         image: postgres:latest
-        # volumes:
-        #     - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+        volumes:
+            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
         ports:
             - 5432:5432
         container_name: postgres
