--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.7"
 services:
     backend:
         build: .
@@ -10,8 +10,7 @@ services:
         networks:
             - geniva-network
         depends_on:
-            postgres:
-                condition: service_healthy
+            - postgres
 
     postgres:
         image: postgres:latest
